@@ -1,3 +1,6 @@
 Eran Cohen <eran@stratoscale.com>
 Eran Cohen <eranco@redhat.com>
+Relese job <releser@releser.com>
+Ronnie Lazar <ronnie.lazar@redhat.com>
 Ronnie Lazar <ronnie@stratoscale.com>
+osher cohen <oscohen@localhost.localdomain>
