@@ -3,8 +3,12 @@
 import argparse
 import logging
 import sys
+import requests
 import yaml
 from release import gittools
+
+
+IMAGE_TAGS_URL_TEMPLATE = "https://quay.io/v1/repositories/ocpmetal/{}/tags"
 
 
 def get_logger():
@@ -58,18 +62,64 @@ def untag_all(manifest, tag):
             gtools.delete_tag(repo, tag)
 
 
+def check_images_exists(manifest, tag):
+    '''Read the manifest file and check for each repository if all images exists with the given tag
+    Raise exception in case one or more images are missing
+    '''
+    logger = get_logger()
+    with open(manifest, 'r') as manifest_file:
+        manifest_contnet = yaml.safe_load(manifest_file)
+    logger.info("Checking images with %s tag exists for all repos", tag)
+    missing_images = []
+    for repo, repo_info in manifest_contnet.items():
+        for image in repo_info["images"]:
+            required_sha = repo_info["revision"]
+            if not image_exists(image, tag, required_sha):
+                logger.warning("Missing image %s from repo: %s", image, repo)
+                missing_images.append(image)
+    if missing_images:
+        raise Exception("Missinge images %s" % missing_images)
+
+
+def image_exists(image_name, tag, required_sha):
+    '''Get the image tags list and find another tag matching the required sha with the same image id'''
+    url = IMAGE_TAGS_URL_TEMPLATE.format(image_name)
+    # get the image tags
+    response = requests.get(url=url)
+    # if list tags failed return False
+    if not response.ok:
+        return False
+    tag_to_image_id_map = response.json()
+    # get the image_id for the required tag
+    required_image_id = tag_to_image_id_map.get(tag)
+    # if the required tag isn't in the tag list, return False
+    if not required_image_id:
+        return False
+    for image_tag, image_id in tag_to_image_id_map.items():
+        # find a an image with the required_image_id
+        if image_id == required_image_id:
+            # it the iamge_tag match the required_sha - return True
+            if image_tag == required_sha:
+                return True
+    return False
+
+
 def main():
     parser = argparse.ArgumentParser(description='Tag all assisted installer repositories')
     parser.add_argument('-t', '--tag', help='The tag to create', type=str, required=True)
-    parser.add_argument('-d', '--delete', help='Delete the tag from all repos', action="store_true")
-    parser.add_argument('-f', '--force', help='Override the tag if previosly exists', action="store_true")
+    tag_options = parser.add_mutually_exclusive_group()
+    tag_options.add_argument('-d', '--delete', help='Delete the tag from all repos', action="store_true")
+    tag_options.add_argument('-f', '--force', help='Override the tag if previosly exists', action="store_true")
+    tag_options.add_argument('-c', '--check', help='Check if the repository images with the given tag exists', action="store_true")
     parser.add_argument('-m', '--manifest', help='Path to manifest file', type=str, default="./assisted-installer.yaml")
     args = parser.parse_args()
     if args.delete:
-      untag_all(args.manifest, args.tag)
-    elif args.tag:
+        untag_all(args.manifest, args.tag)
+    elif args.check:
+        check_images_exists(args.manifest, args.tag)
+    else:
         tag_all(args.manifest, args.tag, args.force)
-      
+
 
 if __name__ == "__main__":
     main()
